# python-extension

./: .gitignore  CMakeLists.txt  g1.c  g1.cc  main.cpp  setup.py  test.py  typedefs.h
python_extension/: python_extension.sln  python_extension.vcxproj
